# fw-nrfconnect-nrf

./: west.yml
applications/direction_finding/aoa_beacon/: CMakeLists.txt  README.rst  VERSION  prj.conf  version.cmake
applications/direction_finding/aoa_beacon/src/: app_version.c  main.c
applications/direction_finding/aoa_beacon_cl_cte/: README.rst  prj.conf
applications/direction_finding/aoa_beacon_cl_cte/src/: main.c
applications/direction_finding/aoa_beacon_connectionless_cte/: CMakeLists.txt  prj.conf
applications/direction_finding/aoa_beacon_connectionless_cte/src/: main.c
applications/direction_finding/aoa_locator/: CMakeLists.txt  Kconfig  README.md  README.rst  app_version_sections.ld  prj.conf
applications/direction_finding/aoa_locator/src/: average_results.c  average_results.h  ble.c  ble.h  ble_struct.h  common.c  common.h  dfe_data_preprocess.c  dfe_data_preprocess.h  dfe_local_config.c  dfe_local_config.h  float_ring_buffer.c  float_ring_buffer.h  if.c  if.h  main.c  protocol.c  protocol.h
applications/direction_finding/aoa_locator/tests/: CMakeLists.txt  prj.conf  testcase.yaml
applications/direction_finding/aoa_locator/tests/src/: configuration_fixtures.c  configuration_fixtures.h  dfe_configuration_tests.c  dfe_configuration_tests.h  dfe_samples_mapping_test.c  dfe_samples_mapping_test.h  main.c
applications/direction_finding/aoa_locator_cl_cte/: CMakeLists.txt  Kconfig  README.rst  prj.conf
applications/direction_finding/aoa_locator_cl_cte/src/: ble.h  dfe_local_config.c  dfe_local_config.h  dfe_samples_data.h  if.c  if.h  main.c  protocol.c  protocol.h
applications/direction_finding/aoa_locator_connectionless_cte/: CMakeLists.txt  Kconfig  README.rst  prj.conf
applications/direction_finding/aoa_locator_connectionless_cte/src/: ble.c  ble.h  dfe_local_config.c  dfe_local_config.h  dfe_samples_data.h  if.c  if.h  main.c  protocol.c  protocol.h
applications/direction_finding/aoa_locator_geometric/: CMakeLists.txt  Kconfig  README.rst  prj.conf
applications/direction_finding/aoa_locator_geometric/src/: dfe_local_config.c  dfe_local_config.h  dfresults.h  if.c  main.c  protocol.c  protocol.h
applications/direction_finding/df_ant_tester/: Kconfig  README.rst  prj.conf
applications/direction_finding/df_ant_tester/src/: antenna_test.c  antenna_test.h  ble.c  if.c  iq_samples_statistics.c  main.c  protocol.h
applications/direction_finding/df_iq_samples_grabber/: CMakeLists.txt  README.rst  app_version.h.in  prj.conf
applications/direction_finding/df_iq_samples_grabber/src/: ble.c  dfe_local_config.c  main.c
applications/direction_finding/nrf_antenna_tester/: CMakeLists.txt  Kconfig  README.rst  prj.conf
applications/direction_finding/nrf_antenna_tester/src/: antenna_test.c  antenna_test.h  ble.c  ble.h  dfe_local_config.c  dfe_local_config.h  dfe_samples_data.h  if.c  if.h  iq_samples_statistics.h  main.c  protocol.c  protocol.h
applications/nrf_desktop/configuration/nrf52840_pca10056/: app_ZDebug.conf  app_ZRelease.conf
applications/nrf_desktop/src/hw_interface/: buttons.c
applications/nrf_desktop/src/modules/: CMakeLists.txt  Kconfig  Kconfig.debug_ppi  ble_adv.c  debug_gpio.h  debug_ppi.c  hid_state.c
subsys/bluetooth/controller/: hci_driver.c
